--- a/src/index.css
+++ b/src/index.css
@@ -73,11 +73,11 @@
 }
 
 .bg-discount-gradient {
-  background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
+  background: linear-gradient(125.17deg, #7abd4a 0%, #0a9245 100%);
 }
 
 .box-shadow {
-  box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  box-shadow: 0px 20px 100px -10px rgba(16, 133, 99, 0.1);
 }
 
 .sidebar {
@@ -125,7 +125,7 @@
 }
 
 .blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+  background: linear-gradient(180deg, rgba(8, 151, 96, 0) 0%, #214d76 100%);
   filter: blur(123px);
 }
 
